[gd_scene load_steps=6 format=3 uid="uid://f23eh00fbej4"]

[ext_resource type="Script" uid="uid://bj46gcilfgjkd" path="res://demo/connection_menu/main_menu.gd" id="1_4lca8"]
[ext_resource type="Script" uid="uid://ucgygpb8i68l" path="res://demo/connection_menu/connection_manager.gd" id="2_g5yev"]
[ext_resource type="PackedScene" uid="uid://dh1sxbdlkvrg0" path="res://demo/connection_menu/room_info.tscn" id="2_jolme"]
[ext_resource type="Script" uid="uid://2p0iktokm30n" path="res://demo/connection_menu/room_list.gd" id="3_g5yev"]

[sub_resource type="LabelSettings" id="LabelSettings_8w0xh"]
font_size = 48

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4lca8")

[node name="Intro" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 226.0
offset_bottom = 67.0

[node name="Title" type="Label" parent="Intro"]
layout_mode = 2
text = "Welcome!"
label_settings = SubResource("LabelSettings_8w0xh")

[node name="Desc" type="Label" parent="Intro"]
layout_mode = 2
text = "This is just a basic example demenstrating the usage of NodeTunnel.
If you have any questions, please refer to the docs. Feel free to ask
questions on Discord as well!"

[node name="ConnectionManager" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -263.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("2_g5yev")

[node name="RoomName" type="LineEdit" parent="ConnectionManager"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Room ID"

[node name="Region" type="OptionButton" parent="ConnectionManager"]
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 2
popup/item_0/text = "us-east"
popup/item_0/id = 0
popup/item_1/text = "localhost"
popup/item_1/id = 1

[node name="Host" type="Button" parent="ConnectionManager"]
layout_mode = 2
text = "Host Room"

[node name="HSeparator" type="HSeparator" parent="ConnectionManager"]
layout_mode = 2

[node name="RoomId" type="LineEdit" parent="ConnectionManager"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Room ID"

[node name="Join" type="Button" parent="ConnectionManager"]
layout_mode = 2
text = "Join Room"

[node name="HSeparator2" type="HSeparator" parent="ConnectionManager"]
layout_mode = 2

[node name="RefreshList" type="Button" parent="ConnectionManager"]
layout_mode = 2
text = "Refresh"

[node name="RoomList" type="ScrollContainer" parent="ConnectionManager"]
custom_minimum_size = Vector2(263, 0)
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("3_g5yev")
room_info_scene = ExtResource("2_jolme")

[node name="Rooms" type="VBoxContainer" parent="ConnectionManager/RoomList"]
layout_mode = 2

[connection signal="pressed" from="ConnectionManager/Host" to="ConnectionManager" method="_on_host_pressed"]
[connection signal="pressed" from="ConnectionManager/Join" to="ConnectionManager" method="_on_join_pressed"]
[connection signal="pressed" from="ConnectionManager/RefreshList" to="ConnectionManager/RoomList" method="_on_refresh_list_pressed"]
